--- a/src/App.scss
+++ b/src/App.scss
@@ -943,20 +943,22 @@ $colorBGnav:#e0e0e0;
         position: absolute;
         top: 25px;
         left: 0;
-        width: 150px;
-        height: 100px;
-        border: 1px solid rebeccapurple;
+        width: 100%;
+        height: 150px;
+        border: 2px solid $colorBorderDrop;
         background-color: #fefefe;
+        scroll-snap-type: mandatory;
+        overflow: auto;
     }
         .dropDown-info-adddoctorMEQ div{
             text-align: start;
-            padding: 5px;
+            padding: 8px;
         }
         .dropDown-info-adddoctorMEQ div:hover{
             background-color: #ddd;
         }
         .input-textadvisor-addDoctorMEQ,.input-textMEQ-addDoctorMEQ{
-            width: 150px;
+            width: 100%;
             height: 25px;
             border: 1px solid $colorBorderDrop;
         }
@@ -977,6 +979,96 @@ $colorBGnav:#e0e0e0;
     .btn-save-addDoctorMEQ{
         width: 35%;
     }
+
+// modalEditGroupAllmodal
+    .body-content-editGroupAllmodal{
+        height: 250px;
+        width: 100%;
+    }
+    .header-editGroupAllmodal{
+        height: 50px;
+        width: 100%;
+        background-color: $colorBGmenu;
+        display: flex;
+        align-items: center;
+        padding: 35px;
+    }
+        .header-editGroupAllmodal span{
+            color: #fefefe;
+            font-size: 18px;
+            font-weight: bold;
+        }
+    .input-editGroupAllmodal{
+        height: 50px;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 25% 75%;
+        margin: 5px auto;
+    }
+        .titlename-inputeditGroupAllmodal,.inputname-inputeditGroupAllmodal{
+            display: flex;
+            justify-content: start;
+            align-items: center;
+            padding-left: 35px;
+        }
+        .titlename-inputeditGroupAllmodal span{
+            font-size: 18px;
+            font-weight: bold;
+        }
+        .inputname-inputeditGroupAllmodal{
+            padding: 0;
+            justify-content: center;
+        }
+        .inputname-inputeditGroupAllmodal input{
+            width: 90%;
+            height: 80%;
+            border: 2px solid #ddd;
+            padding-left: 10px;
+            font-size: 18px;
+        }
+    .inputdate-editGroupAllmodal{
+        margin: 10px auto;
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+    .box-inputDate-editGroupAllmodal{
+        display: block;
+        height: auto;
+        width: 100%;
+    }
+    .boxgrid-inputdate-editGroupAllmodal{
+        display: grid;
+        grid-template-columns: 25% 75%;
+        padding: 15px 15px 5px 35px;
+    }
+        .input-grid-editGroupAllmodal span{
+            font-size: 18px;
+            font-weight: bold;
+        }
+        .input-grid-editGroupAllmodal input{
+            width: auto;
+            height: auto;
+            border: 2px solid #ddd;
+        }
+    .boxsubmit-button-editGroupAllmodal{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+        .boxsubmit-button-editGroupAllmodal button{
+            width: 40%;
+            height: 50%;
+            font-size: 18px;
+            font-weight: bold;
+            color: #fefefe;
+            border: 2px solid $colorBGmenu;
+            background-color: $colorBTNhover;
+        }
+        .boxsubmit-button-editGroupAllmodal button:hover{
+            background-color: $colorBTNbghover;
+        }
+
+
 
 @media only screen and (max-width:1024px){
     .row-input-doctorInputControllStudent{
@@ -2414,6 +2506,14 @@ $colorBGnav:#e0e0e0;
             padding: 5px 10px;
             background-color: $colorBGnav
         }
+    #tableGroupAll{
+        width: 100%;
+    }
+@media only screen and (max-width:800px) {
+    #tableGroupAll{
+        width: 550px;
+    }
+}
 }
 
 @mixin Spinner(){
