--- a/src/App.scss
+++ b/src/App.scss
@@ -143,6 +143,17 @@ $colorBGnav:#e0e0e0;
             padding: 0 10px;
             background-color: $colorBGmenu;
         }
+            .btn-logout-navigatepage{
+                border: none;
+                width: 10%;
+                height: 90%;
+                background-color: $colorBGmenu;
+            }
+                .btn-logout-navigatepage i{
+                    font-size: 23px;
+                    font-weight: bold;
+                    color: #fefefe;
+                }
             .header-navigatepage span{
                 background-color: $colorBGmenu;
                 color: #fefefe;
@@ -1297,6 +1308,12 @@ $colorBGnav:#e0e0e0;
             scroll-snap-type: mandatory;
             overflow: auto;
         }
+            .infogrp-box-dropinfoContentwork{
+                padding: 5px;
+            }
+            .infogrp-box-dropinfoContentwork span{
+                font-weight: bold;
+            }
         .dropinfo-Contentwork-nav{
             display: none;
             width:  100%;
@@ -1379,10 +1396,14 @@ $colorBGnav:#e0e0e0;
             font-weight: bold;
         }
     .boxcontent-contentwork{
-        width: 100%;
-        height: 87%;
         display: grid;
         grid-template-columns: 90% 10%;
+        width: 100%;
+        height: auto;
+    }
+    .colbox-contentwork{
+        width: 100%;
+        height: 750px;
     }
         .row-info-contentwork{
             border: 1px solid rebeccapurple;
@@ -1393,6 +1414,8 @@ $colorBGnav:#e0e0e0;
         }
         .col-info-contentwork{
             border: 1px solid black;
+            scroll-snap-type: mandatory;
+            overflow: auto;
         }
         .title-info-contentwork{
             border: 2px solid black;
@@ -2470,14 +2493,14 @@ $colorBGnav:#e0e0e0;
         background-color: #fefefe;
         text-align: center;
         font-weight: bold;
-        position: relative;
+        // position: relative;
         margin: auto;
     }
        .table-show-info{
             thead{
                 // border: 5px solid red;
                 text-align: center;
-                position: sticky;
+                // position: sticky;
                 position: -webkit-sticky;
                 top: 0;
             }
